--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,5 @@
 specVersion: 0.0.1
+description: OpenPredict on Ethereum
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,13 +9,15 @@ dataSources:
     source:
       address: "0x4fe5851c9af07df9e5ad8217afae1ea72737ebda"
       abi: OpenPredict
+      startBlock: 10650191
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Approval
         - Transfer
+        - Staking
       abis:
         - name: OpenPredict
           file: ./abis/OpenPredict.json
